map_editor_frontend/style.css
.header-parent {
  display: grid;
  grid-template: 5% 90% 5% / 5% 90% 5%;
  height: 100%;
}

header {
  grid-column: 1 / 4;
  padding: 5px;
  display: flex;
  justify-content: space-between;
}

footer {
  grid-column: 1 / 4;
}

.left-side {
  grid-column: 1 / 2;
}

.right-side {
  grid-column: 3 / 4;
}

#map {
  display: flex;
  flex-direction: column;
  overflow: scroll;
  padding: 7px;
}

.map-row {
  width: 100%;
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
}

#map-left-header {
  height: 100%;
  grid-row: 2 / -1;
  grid-column: 1;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
}

.tile {
  position: relative;
  width: calc(100% - 4px);
  height: 0px;
  padding-bottom: calc(100% - 4px);
  border: rgba(143, 111, 111, 0.166) dashed 2px;
}

.tile.basic-tile {
  width: calc(100% - 10px);
  padding-bottom: calc(100% - 10px);
  border: rgb(75, 66, 70) solid 5px;
}

.tile.no-top {
  border-top: none;
  padding-bottom: calc(100% - 5px);
}

.tile.no-right {
  width: calc(100% - 5px);
  border-right: none;
}

.tile.no-bottom {
  border-bottom: none;
  padding-bottom: calc(100% - 5px);
}

.tile.no-left {
  width: calc(100% - 5px);
  border-left: none;
}

.tile.no-left.no-right {
  width: 100%;
}

.tile.no-top.no-bottom {
  padding-bottom: 100%;
}

.tile.map-header {
  border: none;
  padding-bottom: 75%;
  text-align: center;
}

.tile-image {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  position: absolute;
  bottom: 0px;
  background-repeat: no-repeat;
  background-size: cover;
}

.rotate-90 {
  transform: rotate(90deg)
}

.no-left .rotate-90, .no-right .rotate-90, .no-left .rotate-270, .no-right .rotate-270 {
  bottom: -5px;
}



.rotate-180 {
  transform: rotate(180deg)
}

.rotate-270 {
  bottom: -5px;
  transform: rotate(270deg)
}

.map-top-header .map-header {
  grid-row: 1 / 1
}

.map-left-header .map-header {
  grid-column: 1 / 1
}

#tool-box {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.tool-button {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  border: 2px solid lightgray;
  border-radius: 5px;
  text-align: center;
  margin-bottom: 5px;
  cursor: pointer;
}

.tool-button.selected {
  border-color: black;
}

.tool-header {
  width: 100%;
  border: 2px solid black;
  border-radius: 5px 5px 0 0;
  margin-bottom: 5px;
  text-align: center;
}

.tool-image {
  width: 50%;
  pointer-events:none;
  touch-action:none;
}

body {
  width: 100vw;
  height: 100vh;
}

html, body {
  margin: 0;
  padding: 0;
}

